<resources>
    <string name="app_name">SimpList 2</string>
    <string name="my_staples_button_name">My Staples</string>
    <string name="store_layout_button_name">Store Layout</string>
    <string name="shopping_list_button_name">Shopping List</string>
    <string name="add_button_label">Add</string>
    <string name="hint_item">Item</string>
    <string name="hint_department">Department</string>
    <string name="hint_location">Location</string>
    <string name="hint_order">Order</string>
    <string name="delete_button_label">Delete</string>
    <string name="shop_button_label">Shop</string>
    <string name="done_button_label">Done</string>
</resources>