<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyStaplesActivity">

    <EditText
        android:id="@+id/my_staples_item_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/hint_item"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toStartOf="@+id/my_staples_department_editText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/my_staples_department_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:background="@drawable/edit_text_border"
        android:completionThreshold="1"
        android:ems="10"
        android:hint="@string/hint_department"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toStartOf="@+id/my_staples_location_editText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/my_staples_item_editText"
        app:layout_constraintTop_toTopOf="@+id/my_staples_item_editText" />

    <AutoCompleteTextView
        android:id="@+id/my_staples_location_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:background="@drawable/edit_text_border"
        android:completionThreshold="1"
        android:ems="10"
        android:hint="@string/hint_location"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/my_staples_department_editText"
        app:layout_constraintTop_toTopOf="@+id/my_staples_department_editText" />

    <Button
        android:id="@+id/my_staples_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/add_button_label"
        app:layout_constraintStart_toStartOf="@+id/my_staples_item_editText"
        app:layout_constraintTop_toBottomOf="@+id/my_staples_item_editText" />

    <ScrollView
        android:id="@+id/my_staples_scrollView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintTop_toBottomOf="@+id/my_staples_add_button"
        tools:layout_editor_absoluteX="16dp">

        <LinearLayout
            android:id="@+id/linearLayoutTest"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" />

    </ScrollView>

    <Button
        android:id="@+id/my_staples_shop_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/shop_button_label"
        app:layout_constraintStart_toStartOf="@+id/my_staples_add_button"
        app:layout_constraintTop_toBottomOf="@+id/my_staples_scrollView" />

    <Button
        android:id="@+id/my_staples_delete_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/delete_button_label"
        app:layout_constraintStart_toStartOf="@+id/my_staples_add_button"
        app:layout_constraintTop_toBottomOf="@+id/my_staples_shop_button" />

</androidx.constraintlayout.widget.ConstraintLayout>