<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/my_staples_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/my_staples_button_name"
        android:textStyle="bold"
        android:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toTopOf="@+id/store_layout_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/store_layout_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/store_layout_button_name"
        android:textStyle="bold"
        android:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/shopping_list_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/shopping_list_button_name"
        android:textStyle="bold"
        android:backgroundTint="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/store_layout_button" />

</androidx.constraintlayout.widget.ConstraintLayout>