<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StoreLayoutActivity">

    <EditText
        android:id="@+id/store_layout_dep_name_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/hint_department"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toStartOf="@+id/store_layout_order_editText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/store_layout_order_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/hint_order"
        android:inputType="number"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toStartOf="@+id/store_layout_add_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/store_layout_dep_name_editText"
        app:layout_constraintTop_toTopOf="@+id/store_layout_dep_name_editText" />

    <Button
        android:id="@+id/store_layout_add_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/add_button_label"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/store_layout_order_editText"
        app:layout_constraintTop_toTopOf="@+id/store_layout_order_editText" />

    <ScrollView
        android:id="@+id/store_layout_scrollView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintTop_toBottomOf="@id/store_layout_add_button"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/store_layout_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/store_layout_dep_name_editText" />

    </ScrollView>

    <EditText
        android:id="@+id/store_layout_delete_department_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/hint_order"
        android:inputType="number"
        android:selectAllOnFocus="true"
        app:layout_constraintStart_toStartOf="@+id/store_layout_dep_name_editText"
        app:layout_constraintTop_toBottomOf="@+id/store_layout_scrollView" />

    <Button
        android:id="@+id/store_layout_delete_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/delete_button_label"
        app:layout_constraintStart_toEndOf="@+id/store_layout_delete_department_editText"
        app:layout_constraintTop_toTopOf="@+id/store_layout_delete_department_editText" />
</androidx.constraintlayout.widget.ConstraintLayout>